--- a/templates/damdec.xml
+++ b/templates/damdec.xml
@@ -19,4 +19,9 @@
     </context>
   </template>
   <template name="ret" value="return $END$;" description="return" toReformat="true" toShortenFQNames="true" />
+  <template name="if" value="if ($END$) {&#10;&#10;}" description="if" toReformat="false" toShortenFQNames="true">
+    <context>
+      <option name="PHP" value="true" />
+    </context>
+  </template>
 </templateSet>
